Assn6/ass6_19CS10069_19CS30007.output
Terminals unused in grammar

    TYPEDEF
    ENUMERATION_CONST


Grammar

    0 $accept: translation_unit $end

    1 changetable: %empty

    2 constant: INTEGER_CONST
    3         | FLOAT_CONST
    4         | CHAR_CONST

    5 primary_expression: IDENTIFIER
    6                   | constant
    7                   | STRING_LITERAL
    8                   | '(' expression ')'

    9 postfix_expression: primary_expression
   10                   | postfix_expression '[' expression ']'
   11                   | postfix_expression '(' argument_expression_list_opt ')'
   12                   | postfix_expression '.' IDENTIFIER
   13                   | postfix_expression ARROW IDENTIFIER
   14                   | postfix_expression INCREMENT
   15                   | postfix_expression DECREMENT
   16                   | '(' type_name ')' '{' initializer_list '}'
   17                   | '(' type_name ')' '{' initializer_list ',' '}'

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list ',' assignment_expression

   20 argument_expression_list_opt: argument_expression_list
   21                             | %empty

   22 unary_expression: postfix_expression
   23                 | INCREMENT unary_expression
   24                 | DECREMENT unary_expression
   25                 | unary_operator cast_expression
   26                 | SIZEOF unary_expression
   27                 | SIZEOF '(' type_name ')'

   28 unary_operator: BITWISE_AND
   29               | MULT
   30               | PLUS
   31               | MINUS
   32               | BITWISE_NOT
   33               | LOGICAL_NOT

   34 cast_expression: unary_expression
   35                | '(' type_name ')' cast_expression

   36 multiplicative_expression: cast_expression
   37                          | multiplicative_expression MULT cast_expression
   38                          | multiplicative_expression DIVIDE cast_expression
   39                          | multiplicative_expression MODULO cast_expression

   40 additive_expression: multiplicative_expression
   41                    | additive_expression PLUS multiplicative_expression
   42                    | additive_expression MINUS multiplicative_expression

   43 shift_expression: additive_expression
   44                 | shift_expression LSHIFT additive_expression
   45                 | shift_expression RSHIFT additive_expression

   46 relational_expression: shift_expression
   47                      | relational_expression LT shift_expression
   48                      | relational_expression GT shift_expression
   49                      | relational_expression LEQ shift_expression
   50                      | relational_expression GEQ shift_expression

   51 equality_expression: relational_expression
   52                    | equality_expression EQ relational_expression
   53                    | equality_expression NEQ relational_expression

   54 and_expression: equality_expression
   55               | and_expression BITWISE_AND equality_expression

   56 exclusive_or_expression: and_expression
   57                        | exclusive_or_expression XOR and_expression

   58 inclusive_or_expression: exclusive_or_expression
   59                        | inclusive_or_expression BITWISE_OR exclusive_or_expression

   60 logical_and_expression: inclusive_or_expression
   61                       | logical_and_expression LOGICAL_AND M inclusive_or_expression

   62 logical_or_expression: logical_and_expression
   63                      | logical_or_expression LOGICAL_OR M logical_and_expression

   64 conditional_expression: logical_or_expression
   65                       | logical_or_expression '?' expression ':' conditional_expression

   66 assignment_expression: conditional_expression
   67                      | unary_expression assignment_operator assignment_expression

   68 assignment_operator: ASGN
   69                    | MULT_ASGN
   70                    | DIV_ASGN
   71                    | MOD_ASGN
   72                    | ADD_ASGN
   73                    | SUB_ASGN
   74                    | LSHIFT_ASGN
   75                    | RSHIFT_ASGN
   76                    | AND_ASGN
   77                    | XOR_ASGN
   78                    | OR_ASGN

   79 expression: assignment_expression
   80           | expression ',' assignment_expression

   81 constant_expression: conditional_expression

   82 declaration: declaration_specifiers init_declarator_list_opt semicolon

   83 init_declarator_list_opt: init_declarator_list
   84                         | %empty

   85 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   86                       | type_specifier declaration_specifiers_opt
   87                       | type_qualifier declaration_specifiers_opt
   88                       | function_specifier declaration_specifiers_opt

   89 declaration_specifiers_opt: declaration_specifiers
   90                           | %empty

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list ',' init_declarator

   93 init_declarator: declarator
   94                | declarator ASGN initializer

   95 storage_class_specifier: EXTERN
   96                        | STATIC
   97                        | AUTO
   98                        | REGISTER

   99 type_specifier: VOID
  100               | CHAR
  101               | SHORT
  102               | INT
  103               | LONG
  104               | FLOAT
  105               | DOUBLE
  106               | SIGNED
  107               | UNSIGNED
  108               | _BOOL
  109               | _COMPLEX
  110               | _IMAGINARY
  111               | enum_specifier
  112               | struct_or_union_specifier

  113 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  114                         | type_qualifier specifier_qualifier_list_opt

  115 specifier_qualifier_list_opt: specifier_qualifier_list
  116                             | %empty

  117 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  118                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  119                          | struct_or_union IDENTIFIER

  120 struct_or_union: STRUCT
  121                | UNION

  122 struct_declaration_list: struct_declaration
  123                        | struct_declaration_list struct_declaration

  124 struct_declaration: specifier_qualifier_list semicolon
  125                   | specifier_qualifier_list struct_declarator_list semicolon

  126 struct_declarator_list: struct_declarator
  127                       | struct_declarator_list ',' struct_declarator

  128 struct_declarator: ':' constant_expression
  129                  | declarator ':' constant_expression
  130                  | declarator

  131 enum_specifier: ENUM identifier_opt '{' enumerator_list '}'
  132               | ENUM identifier_opt '{' enumerator_list ',' '}'
  133               | ENUM IDENTIFIER

  134 identifier_opt: IDENTIFIER
  135               | %empty

  136 enumerator_list: enumerator
  137                | enumerator_list ',' enumerator

  138 enumerator: IDENTIFIER
  139           | IDENTIFIER ASGN constant_expression

  140 type_qualifier: CONST
  141               | RESTRICT
  142               | VOLATILE

  143 function_specifier: INLINE

  144 declarator: pointer direct_declarator
  145           | direct_declarator

  146 direct_declarator: IDENTIFIER
  147                  | '(' declarator ')'
  148                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  149                  | direct_declarator '[' type_qualifier_list ']'
  150                  | direct_declarator '[' assignment_expression ']'
  151                  | direct_declarator '[' ']'
  152                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  153                  | direct_declarator '[' STATIC assignment_expression ']'
  154                  | direct_declarator '[' type_qualifier_list MULT ']'
  155                  | direct_declarator '[' MULT ']'
  156                  | direct_declarator '(' FUN_CT parameter_type_list ')'
  157                  | direct_declarator '(' identifier_list ')'
  158                  | direct_declarator '(' FUN_CT ')'

  159 type_qualifier_list_opt: type_qualifier_list
  160                        | %empty

  161 pointer: MULT type_qualifier_list_opt
  162        | MULT type_qualifier_list_opt pointer

  163 type_qualifier_list: type_qualifier
  164                    | type_qualifier_list type_qualifier

  165 parameter_type_list: parameter_list
  166                    | parameter_list ',' ELLIPSIS

  167 parameter_list: parameter_declaration
  168               | parameter_list ',' parameter_declaration

  169 parameter_declaration: declaration_specifiers declarator
  170                      | declaration_specifiers

  171 identifier_list: IDENTIFIER
  172                | identifier_list ',' IDENTIFIER

  173 type_name: specifier_qualifier_list

  174 initializer: assignment_expression
  175            | '{' initializer_list '}'
  176            | '{' initializer_list ',' '}'

  177 initializer_list: designation_opt initializer
  178                 | initializer_list ',' designation_opt initializer

  179 designation_opt: designation
  180                | %empty

  181 designation: designator_list ASGN

  182 designator_list: designator
  183                | designator_list designator

  184 designator: '[' constant_expression ']'
  185           | '.' IDENTIFIER

  186 statement: labeled_statement
  187          | compound_statement
  188          | expression_statement
  189          | selection_statement
  190          | iteration_statement
  191          | jump_statement

  192 loop_statement: labeled_statement
  193               | expression_statement
  194               | selection_statement
  195               | iteration_statement
  196               | jump_statement

  197 labeled_statement: IDENTIFIER ':' M statement
  198                  | CASE constant_expression ':' statement
  199                  | DEFAULT ':' statement

  200 compound_statement: '{' X changetable block_item_list_opt '}'

  201 block_item_list: block_item
  202                | block_item_list M block_item

  203 block_item_list_opt: block_item_list
  204                    | %empty

  205 block_item: declaration
  206           | statement

  207 expression_statement: semicolon
  208                     | expression semicolon

  209 selection_statement: IF '(' expression ')' M statement N
  210                    | IF '(' expression ')' M statement N ELSE M statement
  211                    | SWITCH '(' expression ')' statement

  212 iteration_statement: WHILE W '(' X changetable M expression ')' M loop_statement
  213                    | WHILE W '(' X changetable M expression ')' '{' M block_item_list_opt '}'
  214                    | DO D M loop_statement M WHILE '(' expression ')' semicolon
  215                    | DO D '{' M block_item_list_opt '}' M WHILE '(' expression ')' semicolon
  216                    | FOR F '(' X changetable declaration M expression_statement M expression N ')' M loop_statement
  217                    | FOR F '(' X changetable expression_statement M expression_statement M expression N ')' M loop_statement
  218                    | FOR F '(' X changetable declaration M expression_statement M expression N ')' M '{' block_item_list_opt '}'
  219                    | FOR F '(' X changetable expression_statement M expression_statement M expression N ')' M '{' block_item_list_opt '}'

  220 jump_statement: GOTO IDENTIFIER semicolon
  221               | CONTINUE semicolon
  222               | BREAK semicolon
  223               | RETURN expression semicolon
  224               | RETURN semicolon

  225 translation_unit: external_declaration
  226                 | translation_unit external_declaration

  227 external_declaration: function_definition
  228                     | declaration

  229 function_definition: declaration_specifiers declarator declaration_list_opt FUN_CT '{' block_item_list_opt '}'

  230 declaration_list_opt: declaration_list
  231                     | %empty

  232 declaration_list: declaration
  233                 | declaration_list declaration

  234 M: %empty

  235 F: %empty

  236 W: %empty

  237 D: %empty

  238 X: %empty

  239 N: %empty

  240 FUN_CT: %empty

  241 semicolon: ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 8 11 16 17 27 35 147 156 157 158 209 210 211 212 213 214 215 216 217 218 219
    ')' (41) 8 11 16 17 27 35 147 156 157 158 209 210 211 212 213 214 215 216 217 218 219
    ',' (44) 17 19 80 92 127 132 137 166 168 172 176 178
    '.' (46) 12 185
    ':' (58) 65 128 129 197 198 199
    ';' (59) 241
    '?' (63) 65
    '[' (91) 10 148 149 150 151 152 153 154 155 184
    ']' (93) 10 148 149 150 151 152 153 154 155 184
    '{' (123) 16 17 117 118 131 132 175 176 200 213 215 218 219 229
    '}' (125) 16 17 117 118 131 132 175 176 200 213 215 218 219 229
    error (256)
    BREAK (258) 222
    RETURN (259) 223 224
    CASE (260) 198
    FOR (261) 216 217 218 219
    WHILE (262) 212 213 214 215
    GOTO (263) 220
    SIZEOF (264) 26 27
    CONTINUE (265) 221
    IF (266) 209 210
    DO (267) 214 215
    SWITCH (268) 211
    ELSE (269) 210
    FLOAT (270) 104
    SHORT (271) 101
    CHAR (272) 100
    _BOOL (273) 108
    _IMAGINARY (274) 110
    _COMPLEX (275) 109
    INT (276) 102
    DOUBLE (277) 105
    LONG (278) 103
    VOID (279) 99
    SIGNED (280) 106
    AUTO (281) 97
    UNSIGNED (282) 107
    ENUM (283) 131 132 133
    UNION (284) 121
    STRUCT (285) 120
    TYPEDEF (286)
    CONST (287) 140
    DEFAULT (288) 199
    STATIC (289) 96 152 153
    REGISTER (290) 98
    RESTRICT (291) 141
    VOLATILE (292) 142
    EXTERN (293) 95
    INLINE (294) 143
    IDENTIFIER <symp> (295) 5 12 13 118 119 133 134 138 139 146 171 172 185 197 220
    INTEGER_CONST <int_val> (296) 2
    CHAR_CONST <char_val> (297) 4
    FLOAT_CONST <float_val> (298) 3
    STRING_LITERAL <char_val> (299) 7
    PLUS (300) 30 41
    MINUS (301) 31 42
    MULT (302) 29 37 154 155 161 162
    DIVIDE (303) 38
    ARROW (304) 13
    INCREMENT (305) 14 23
    DECREMENT (306) 15 24
    RSHIFT (307) 45
    LSHIFT (308) 44
    LT (309) 47
    GT (310) 48
    LEQ (311) 49
    GEQ (312) 50
    EQ (313) 52
    NEQ (314) 53
    BITWISE_OR (315) 59
    LOGICAL_OR (316) 63
    BITWISE_AND (317) 28 55
    LOGICAL_AND (318) 61
    XOR (319) 57
    BITWISE_NOT (320) 32
    LOGICAL_NOT (321) 33
    ELLIPSIS (322) 166
    MODULO (323) 39
    ASGN (324) 68 94 139 181
    ENUMERATION_CONST (325)
    ADD_ASGN (326) 72
    SUB_ASGN (327) 73
    MULT_ASGN (328) 69
    DIV_ASGN (329) 70
    MOD_ASGN (330) 71
    LSHIFT_ASGN (331) 74
    RSHIFT_ASGN (332) 75
    AND_ASGN (333) 76
    OR_ASGN (334) 78
    XOR_ASGN (335) 77
    "then" (336)


Nonterminals, with rules where they appear

    $accept (93)
        on left: 0
    changetable (94)
        on left: 1
        on right: 200 212 213 216 217 218 219
    constant <expr> (95)
        on left: 2 3 4
        on right: 6
    primary_expression <expr> (96)
        on left: 5 6 7 8
        on right: 9
    postfix_expression <A> (97)
        on left: 9 10 11 12 13 14 15 16 17
        on right: 10 11 12 13 14 15 22
    argument_expression_list <num_params> (98)
        on left: 18 19
        on right: 19 20
    argument_expression_list_opt <num_params> (99)
        on left: 20 21
        on right: 11
    unary_expression <A> (100)
        on left: 22 23 24 25 26 27
        on right: 23 24 26 34 67
    unary_operator <unaryOp> (101)
        on left: 28 29 30 31 32 33
        on right: 25
    cast_expression <A> (102)
        on left: 34 35
        on right: 25 35 36 37 38 39
    multiplicative_expression <expr> (103)
        on left: 36 37 38 39
        on right: 37 38 39 40 41 42
    additive_expression <expr> (104)
        on left: 40 41 42
        on right: 41 42 43 44 45
    shift_expression <expr> (105)
        on left: 43 44 45
        on right: 44 45 46 47 48 49 50
    relational_expression <expr> (106)
        on left: 46 47 48 49 50
        on right: 47 48 49 50 51 52 53
    equality_expression <expr> (107)
        on left: 51 52 53
        on right: 52 53 54 55
    and_expression <expr> (108)
        on left: 54 55
        on right: 55 56 57
    exclusive_or_expression <expr> (109)
        on left: 56 57
        on right: 57 58 59
    inclusive_or_expression <expr> (110)
        on left: 58 59
        on right: 59 60 61
    logical_and_expression <expr> (111)
        on left: 60 61
        on right: 61 62 63
    logical_or_expression <expr> (112)
        on left: 62 63
        on right: 63 64 65
    conditional_expression <expr> (113)
        on left: 64 65
        on right: 65 66 81
    assignment_expression <expr> (114)
        on left: 66 67
        on right: 18 19 67 79 80 148 150 152 153 174
    assignment_operator (115)
        on left: 68 69 70 71 72 73 74 75 76 77 78
        on right: 67
    expression <expr> (116)
        on left: 79 80
        on right: 8 10 65 80 208 209 210 211 212 213 214 215 216 217 218 219 223
    constant_expression (117)
        on left: 81
        on right: 128 129 139 184 198
    declaration (118)
        on left: 82
        on right: 205 216 218 228 232 233
    init_declarator_list_opt (119)
        on left: 83 84
        on right: 82
    declaration_specifiers (120)
        on left: 85 86 87 88
        on right: 82 89 169 170 229
    declaration_specifiers_opt (121)
        on left: 89 90
        on right: 85 86 87 88
    init_declarator_list (122)
        on left: 91 92
        on right: 83 92
    init_declarator <symp> (123)
        on left: 93 94
        on right: 91 92
    storage_class_specifier (124)
        on left: 95 96 97 98
        on right: 85
    type_specifier (125)
        on left: 99 100 101 102 103 104 105 106 107 108 109 110 111 112
        on right: 86 113
    specifier_qualifier_list (126)
        on left: 113 114
        on right: 115 124 125 173
    specifier_qualifier_list_opt (127)
        on left: 115 116
        on right: 113 114
    struct_or_union_specifier (128)
        on left: 117 118 119
        on right: 112
    struct_or_union (129)
        on left: 120 121
        on right: 117 118 119
    struct_declaration_list (130)
        on left: 122 123
        on right: 117 118 123
    struct_declaration (131)
        on left: 124 125
        on right: 122 123
    struct_declarator_list (132)
        on left: 126 127
        on right: 125 127
    struct_declarator (133)
        on left: 128 129 130
        on right: 126 127
    enum_specifier (134)
        on left: 131 132 133
        on right: 111
    identifier_opt (135)
        on left: 134 135
        on right: 131 132
    enumerator_list (136)
        on left: 136 137
        on right: 131 132 137
    enumerator (137)
        on left: 138 139
        on right: 136 137
    type_qualifier (138)
        on left: 140 141 142
        on right: 87 114 163 164
    function_specifier (139)
        on left: 143
        on right: 88
    declarator <symp> (140)
        on left: 144 145
        on right: 93 94 129 130 147 169 229
    direct_declarator <symp> (141)
        on left: 146 147 148 149 150 151 152 153 154 155 156 157 158
        on right: 144 145 148 149 150 151 152 153 154 155 156 157 158
    type_qualifier_list_opt (142)
        on left: 159 160
        on right: 161 162
    pointer <sym_type> (143)
        on left: 161 162
        on right: 144 162
    type_qualifier_list (144)
        on left: 163 164
        on right: 148 149 152 154 159 164
    parameter_type_list (145)
        on left: 165 166
        on right: 156
    parameter_list (146)
        on left: 167 168
        on right: 165 166 168
    parameter_declaration (147)
        on left: 169 170
        on right: 167 168
    identifier_list (148)
        on left: 171 172
        on right: 157 172
    type_name (149)
        on left: 173
        on right: 16 17 27 35
    initializer <symp> (150)
        on left: 174 175 176
        on right: 94 177 178
    initializer_list (151)
        on left: 177 178
        on right: 16 17 175 176 178
    designation_opt (152)
        on left: 179 180
        on right: 177 178
    designation (153)
        on left: 181
        on right: 179
    designator_list (154)
        on left: 182 183
        on right: 181 183
    designator (155)
        on left: 184 185
        on right: 182 183
    statement <stat> (156)
        on left: 186 187 188 189 190 191
        on right: 197 198 199 206 209 210 211
    loop_statement <stat> (157)
        on left: 192 193 194 195 196
        on right: 212 214 216 217
    labeled_statement <stat> (158)
        on left: 197 198 199
        on right: 186 192
    compound_statement <stat> (159)
        on left: 200
        on right: 187
    block_item_list <stat> (160)
        on left: 201 202
        on right: 202 203
    block_item_list_opt <stat> (161)
        on left: 203 204
        on right: 200 213 215 218 219 229
    block_item <stat> (162)
        on left: 205 206
        on right: 201 202
    expression_statement <expr> (163)
        on left: 207 208
        on right: 188 193 216 217 218 219
    selection_statement <stat> (164)
        on left: 209 210 211
        on right: 189 194
    iteration_statement <stat> (165)
        on left: 212 213 214 215 216 217 218 219
        on right: 190 195
    jump_statement <stat> (166)
        on left: 220 221 222 223 224
        on right: 191 196
    translation_unit (167)
        on left: 225 226
        on right: 0 226
    external_declaration (168)
        on left: 227 228
        on right: 225 226
    function_definition (169)
        on left: 229
        on right: 227
    declaration_list_opt (170)
        on left: 230 231
        on right: 229
    declaration_list (171)
        on left: 232 233
        on right: 230 233
    M <instr_number> (172)
        on left: 234
        on right: 61 63 197 202 209 210 212 213 214 215 216 217 218 219
    F (173)
        on left: 235
        on right: 216 217 218 219
    W (174)
        on left: 236
        on right: 212 213
    D (175)
        on left: 237
        on right: 214 215
    X (176)
        on left: 238
        on right: 200 212 213 216 217 218 219
    N <stat> (177)
        on left: 239
        on right: 209 210 216 217 218 219
    FUN_CT (178)
        on left: 240
        on right: 156 158 229
    semicolon (179)
        on left: 241
        on right: 82 124 125 207 208 214 215 220 221 222 223 224


State 0

    0 $accept: . translation_unit $end

    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    UNION       shift, and go to state 15
    STRUCT      shift, and go to state 16
    CONST       shift, and go to state 17
    STATIC      shift, and go to state 18
    REGISTER    shift, and go to state 19
    RESTRICT    shift, and go to state 20
    VOLATILE    shift, and go to state 21
    EXTERN      shift, and go to state 22
    INLINE      shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32
    translation_unit           go to state 33
    external_declaration       go to state 34
    function_definition        go to state 35


State 1

  104 type_specifier: FLOAT .

    $default  reduce using rule 104 (type_specifier)


State 2

  101 type_specifier: SHORT .

    $default  reduce using rule 101 (type_specifier)


State 3

  100 type_specifier: CHAR .

    $default  reduce using rule 100 (type_specifier)


State 4

  108 type_specifier: _BOOL .

    $default  reduce using rule 108 (type_specifier)


State 5

  110 type_specifier: _IMAGINARY .

    $default  reduce using rule 110 (type_specifier)


State 6

  109 type_specifier: _COMPLEX .

    $default  reduce using rule 109 (type_specifier)


State 7

  102 type_specifier: INT .

    $default  reduce using rule 102 (type_specifier)


State 8

  105 type_specifier: DOUBLE .

    $default  reduce using rule 105 (type_specifier)


State 9

  103 type_specifier: LONG .

    $default  reduce using rule 103 (type_specifier)


State 10

   99 type_specifier: VOID .

    $default  reduce using rule 99 (type_specifier)


State 11

  106 type_specifier: SIGNED .

    $default  reduce using rule 106 (type_specifier)


State 12

   97 storage_class_specifier: AUTO .

    $default  reduce using rule 97 (storage_class_specifier)


State 13

  107 type_specifier: UNSIGNED .

    $default  reduce using rule 107 (type_specifier)


State 14

  131 enum_specifier: ENUM . identifier_opt '{' enumerator_list '}'
  132               | ENUM . identifier_opt '{' enumerator_list ',' '}'
  133               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 36

    $default  reduce using rule 135 (identifier_opt)

    identifier_opt  go to state 37


State 15

  121 struct_or_union: UNION .

    $default  reduce using rule 121 (struct_or_union)


State 16

  120 struct_or_union: STRUCT .

    $default  reduce using rule 120 (struct_or_union)


State 17

  140 type_qualifier: CONST .

    $default  reduce using rule 140 (type_qualifier)


State 18

   96 storage_class_specifier: STATIC .

    $default  reduce using rule 96 (storage_class_specifier)


State 19

   98 storage_class_specifier: REGISTER .

    $default  reduce using rule 98 (storage_class_specifier)


State 20

  141 type_qualifier: RESTRICT .

    $default  reduce using rule 141 (type_qualifier)


State 21

  142 type_qualifier: VOLATILE .

    $default  reduce using rule 142 (type_qualifier)


State 22

   95 storage_class_specifier: EXTERN .

    $default  reduce using rule 95 (storage_class_specifier)


State 23

  143 function_specifier: INLINE .

    $default  reduce using rule 143 (function_specifier)


State 24

  228 external_declaration: declaration .

    $default  reduce using rule 228 (external_declaration)


State 25

   82 declaration: declaration_specifiers . init_declarator_list_opt semicolon
  229 function_definition: declaration_specifiers . declarator declaration_list_opt FUN_CT '{' block_item_list_opt '}'

    IDENTIFIER  shift, and go to state 38
    MULT        shift, and go to state 39
    '('         shift, and go to state 40

    $default  reduce using rule 84 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 41
    init_declarator_list      go to state 42
    init_declarator           go to state 43
    declarator                go to state 44
    direct_declarator         go to state 45
    pointer                   go to state 46


State 26

   85 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    UNION       shift, and go to state 15
    STRUCT      shift, and go to state 16
    CONST       shift, and go to state 17
    STATIC      shift, and go to state 18
    REGISTER    shift, and go to state 19
    RESTRICT    shift, and go to state 20
    VOLATILE    shift, and go to state 21
    EXTERN      shift, and go to state 22
    INLINE      shift, and go to state 23

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 47
    declaration_specifiers_opt  go to state 48
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    struct_or_union_specifier   go to state 28
    struct_or_union             go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 27

   86 declaration_specifiers: type_specifier . declaration_specifiers_opt

    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    UNION       shift, and go to state 15
    STRUCT      shift, and go to state 16
    CONST       shift, and go to state 17
    STATIC      shift, and go to state 18
    REGISTER    shift, and go to state 19
    RESTRICT    shift, and go to state 20
    VOLATILE    shift, and go to state 21
    EXTERN      shift, and go to state 22
    INLINE      shift, and go to state 23

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 47
    declaration_specifiers_opt  go to state 49
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    struct_or_union_specifier   go to state 28
    struct_or_union             go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 28

  112 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 112 (type_specifier)


State 29

  117 struct_or_union_specifier: struct_or_union . '{' struct_declaration_list '}'
  118                          | struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
  119                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 50
    '{'         shift, and go to state 51


State 30

  111 type_specifier: enum_specifier .

    $default  reduce using rule 111 (type_specifier)


State 31

   87 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    UNION       shift, and go to state 15
    STRUCT      shift, and go to state 16
    CONST       shift, and go to state 17
    STATIC      shift, and go to state 18
    REGISTER    shift, and go to state 19
    RESTRICT    shift, and go to state 20
    VOLATILE    shift, and go to state 21
    EXTERN      shift, and go to state 22
    INLINE      shift, and go to state 23

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 47
    declaration_specifiers_opt  go to state 52
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    struct_or_union_specifier   go to state 28
    struct_or_union             go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 32

   88 declaration_specifiers: function_specifier . declaration_specifiers_opt

    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    UNION       shift, and go to state 15
    STRUCT      shift, and go to state 16
    CONST       shift, and go to state 17
    STATIC      shift, and go to state 18
    REGISTER    shift, and go to state 19
    RESTRICT    shift, and go to state 20
    VOLATILE    shift, and go to state 21
    EXTERN      shift, and go to state 22
    INLINE      shift, and go to state 23

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 47
    declaration_specifiers_opt  go to state 53
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    struct_or_union_specifier   go to state 28
    struct_or_union             go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 33

    0 $accept: translation_unit . $end
  226 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 54
    FLOAT       shift, and go to state 1
    SHORT       shift, and go to state 2
    CHAR        shift, and go to state 3
    _BOOL       shift, and go to state 4
    _IMAGINARY  shift, and go to state 5
    _COMPLEX    shift, and go to state 6
    INT         shift, and go to state 7
    DOUBLE      shift, and go to state 8
    LONG        shift, and go to state 9
    VOID        shift, and go to state 10
    SIGNED      shift, and go to state 11
    AUTO        shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    ENUM        shift, and go to state 14
    UNION       shift, and go to state 15
    STRUCT      shift, and go to state 16
    CONST       shift, and go to state 17
    STATIC      shift, and go to state 18
    REGISTER    shift, and go to state 19
    RESTRICT    shift, and go to state 20
    VOLATILE    shift, and go to state 21
    EXTERN      shift, and go to state 22
    INLINE      shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32
    external_declaration       go to state 55
    function_definition        go to state 35


State 34

  225 translation_unit: external_declaration .

    $default  reduce using rule 225 (translation_unit)


State 35

  227 external_declaration: function_definition .

    $default  reduce using rule 227 (external_declaration)


State 36

  133 enum_specifier: ENUM IDENTIFIER .
  134 identifier_opt: IDENTIFIER .

    '{'       reduce using rule 134 (identifier_opt)
    $default  reduce using rule 133 (enum_specifier)


State 37

  131 enum_specifier: ENUM identifier_opt . '{' enumerator_list '}'
  132               | ENUM identifier_opt . '{' enumerator_list ',' '}'

    '{'  shift, and go to state 56


State 38

  146 direct_declarator: IDENTIFIER .

    $default  reduce using rule 146 (direct_declarator)


State 39

  161 pointer: MULT . type_qualifier_list_opt
  162        | MULT . type_qualifier_list_opt pointer

    CONST     shift, and go to state 17
    RESTRICT  shift, and go to state 20
    VOLATILE  shift, and go to state 21

    $default  reduce using rule 160 (type_qualifier_list_opt)

    type_qualifier           go to state 57
    type_qualifier_list_opt  go to state 58
    type_qualifier_list      go to state 59


State 40

  147 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 38
    MULT        shift, and go to state 39
    '('         shift, and go to state 40

    declarator         go to state 60
    direct_declarator  go to state 45
    pointer            go to state 46


State 41

   82 declaration: declaration_specifiers init_declarator_list_opt . semicolon

    ';'  shift, and go to state 61

    semicolon  go to state 62


State 42

   83 init_declarator_list_opt: init_declarator_list .
   92 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 63

    $default  reduce using rule 83 (init_declarator_list_opt)


State 43
